--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <div class="wrap">
             <div class="card-50">
                 <div class="content-left"> <img src="./assets/cat_saliency.png" style="border-radius: 10px;" > </div>
-                <div class="content-right"><h2> What is Saliency ? </h2> <p> Saliency is the technique used to highlight the parts of the input data (like pixels in an image) that are important for a model's specific prediction.</p> </div>
+                <div class="content-right"><h2> What is Saliency ? </h2> <p> Saliency highlights the parts of the input data (like pixels in an image) that significantly contributes towards model's prediction.</p> </div>
             </div>
           </div>
         </section>
