no rollout... sorry

--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
                 <div class="content-right">
                 <h2> VIT </h2>
                 <h4>1.Importance of CLS tokens (unmasked) <br>
-                2. Raw Attention <br>
-                3. Attention Rollout
+                2. GradCAM<br>
+                3. Quick Discussion on Attention Rollout
                 </h4>
                 </div>
             </div>
@@ -440,16 +440,16 @@
         </section>
 
         
-        <section class="bg-light">
-          <div class="wrap">
-            <div class="card-50">
-                <div class="content-left"> <img src="./assets/notebook3.svg" width="400"> </div>
-                <div class="content-right">
-                <h2> Saliency Tool in Vision Language Models </h2>
-                </div>
-            </div>
-          </div>
-        </section>
+        <!-- <section class="bg-light"> -->
+          <!-- <div class="wrap"> -->
+            <!-- <div class="card-50"> -->
+                <!-- <div class="content-left"> <img src="./assets/notebook3.svg" width="400"> </div> -->
+                <!-- <div class="content-right"> -->
+                <!-- <h2> Saliency Tool in Vision Language Models </h2> -->
+                <!-- </div> -->
+            <!-- </div> -->
+          <!-- </div> -->
+        <!-- </section> -->
 
         
         <section class="fullscreen bg-white aligncenter">
